# JIT_AOT_VM

./: CMakeLists.txt
Dom_tree/google_tests/: CMakeLists.txt  Dom_tree_test.cpp
Dom_tree/include/: DomTree.h  DomTreeNode.h
Dom_tree/src/: CMakeLists.txt  DomTree.cpp
IR_architecture/: CMakeLists.txt  README.md  main.cpp
IR_architecture/google_tests/: CMakeLists.txt  IR_architecture_test.cpp
IR_architecture/include/: basic_block.h  ilist_nodes.h  instructions.h  ir_builder.h  ir_function.h  ir_graph.h  operands.h  user.h  value.h
IR_architecture/src/: CMakeLists.txt  basic_block.cpp  ir_function.cpp  ir_graph.cpp
Inlining/: CMakeLists.txt
Inlining/google_tests/: CMakeLists.txt  Static_inline_test.cpp
Inlining/include/: StaticInline.h
Inlining/src/: CMakeLists.txt  StaticInline.cpp
Loop_search/: CMakeLists.txt
Loop_search/google_tests/: CMakeLists.txt  loop_analyzer_tests.cpp
Loop_search/include/: loop.h  loop_analyzer.h
Loop_search/src/: CMakeLists.txt  loop_analyzer.cpp
RPO/include/: RPO.h
RPO/src/: CMakeLists.txt  RPO.cpp
